[gd_scene load_steps=5 format=3 uid="uid://cbro0ni0g4paj"]

[ext_resource type="Script" path="res://pencil.gd" id="1_6y4hq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_r8i66"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_37x6p"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mukex"]
radius = 0.55

[node name="Pencil" type="CharacterBody3D"]
transform = Transform3D(1.01384, 0, 0, 0, 1.01384, 0, 0, 0, 1.01384, 0, 0, 0)
script = ExtResource("1_6y4hq")

[node name="PencilMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_r8i66")

[node name="PencilCollision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_37x6p")

[node name="Neck" type="Node3D" parent="."]

[node name="FirstPersonCamera" type="Camera3D" parent="Neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_mukex")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
